--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,5 +43,7 @@ workflows:
           requires:
             - plan-apply
       - apply:
+          context:
+            - dummy
           requires:
             - hold-apply
